// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSelector should allow you to set a custom angle for the strikethrough 1`] = `
<Provider app={{...}}>
  <inject-WithStyles(ButtonSelector) model={{...}} strikeThroughAngle={35} strikeThroughDisabled={true}>
    <WithStyles(ButtonSelector) model={{...}} strikeThroughAngle={35} strikeThroughDisabled={true} amp={false} ampStateId={[undefined]}>
      <ButtonSelector model={{...}} strikeThroughAngle={35} strikeThroughDisabled={true} amp={false} ampStateId={[undefined]} classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} showSelectedText={false}>
        <div className={[undefined]}>
          <div className="RSFButtonSelector-buttons-1">
            <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3" amp-bind="class=>undefined.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={true} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":true,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={true} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":true,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16 MuiButton-disabled-31 RSFButtonSelector-disabled-8" disabled={true} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":true,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16 MuiButton-disabled-31 RSFButtonSelector-disabled-8" disabled={true} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":true,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButtonBase-disabled-38 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16 MuiButton-disabled-31 RSFButtonSelector-disabled-8" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="-1" type="button" disabled={true} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":true,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})">
                        <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                          <WithStyles(inject-Image) src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true}>
                            <inject-Image src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true} classes={{...}}>
                              <Image src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true} classes={{...}} amp={false} quality={{...}} contain={false} lazy={false} lazyOffset={100}>
                                <div className="RSFButtonSelector-image-7 RSFImage-root-47 RSFImage-fill-50">
                                  <img src="http://via.placeholder.com/128x128/ffffff" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                </div>
                              </Image>
                            </inject-Image>
                          </WithStyles(inject-Image)>
                        </span>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
              <div className="RSFButtonSelector-strikeThrough-10" style={{...}} />
            </div>
            <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" amp-bind="class=>undefined.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})">
                        <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                          <WithStyles(inject-Image) src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true}>
                            <inject-Image src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true} classes={{...}}>
                              <Image src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true} classes={{...}} amp={false} quality={{...}} contain={false} lazy={false} lazyOffset={100}>
                                <div className="RSFButtonSelector-image-7 RSFImage-root-47 RSFImage-fill-50">
                                  <img src="http://via.placeholder.com/128x128/000000" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                </div>
                              </Image>
                            </inject-Image>
                          </WithStyles(inject-Image)>
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
          </div>
        </div>
      </ButtonSelector>
    </WithStyles(ButtonSelector)>
  </inject-WithStyles(ButtonSelector)>
</Provider>
`;

exports[`ButtonSelector should render buttons with images 1`] = `
<Provider app={{...}}>
  <inject-WithStyles(ButtonSelector) model={{...}}>
    <WithStyles(ButtonSelector) model={{...}} amp={false} ampStateId={[undefined]}>
      <ButtonSelector model={{...}} amp={false} ampStateId={[undefined]} classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} showSelectedText={false} strikeThroughDisabled={false} strikeThroughAngle={45}>
        <div className={[undefined]}>
          <div className="RSFButtonSelector-buttons-1">
            <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3" amp-bind="class=>undefined.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})">
                        <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                          <WithStyles(inject-Image) src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true}>
                            <inject-Image src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true} classes={{...}}>
                              <Image src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true} classes={{...}} amp={false} quality={{...}} contain={false} lazy={false} lazyOffset={100}>
                                <div className="RSFButtonSelector-image-7 RSFImage-root-47 RSFImage-fill-50">
                                  <img src="http://via.placeholder.com/128x128/ffffff" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                </div>
                              </Image>
                            </inject-Image>
                          </WithStyles(inject-Image)>
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
            <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" amp-bind="class=>undefined.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})">
                        <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                          <WithStyles(inject-Image) src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true}>
                            <inject-Image src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true} classes={{...}}>
                              <Image src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true} classes={{...}} amp={false} quality={{...}} contain={false} lazy={false} lazyOffset={100}>
                                <div className="RSFButtonSelector-image-7 RSFImage-root-47 RSFImage-fill-50">
                                  <img src="http://via.placeholder.com/128x128/000000" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                </div>
                              </Image>
                            </inject-Image>
                          </WithStyles(inject-Image)>
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
          </div>
        </div>
      </ButtonSelector>
    </WithStyles(ButtonSelector)>
  </inject-WithStyles(ButtonSelector)>
</Provider>
`;

exports[`ButtonSelector should render buttons with text 1`] = `
<Provider app={{...}}>
  <inject-WithStyles(ButtonSelector) model={{...}}>
    <WithStyles(ButtonSelector) model={{...}} amp={false} ampStateId={[undefined]}>
      <ButtonSelector model={{...}} amp={false} ampStateId={[undefined]} classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} showSelectedText={false} strikeThroughDisabled={false} strikeThroughAngle={45}>
        <div className={[undefined]}>
          <div className="RSFButtonSelector-buttons-1">
            <div className="RSFButtonSelector-button-2" amp-bind="class=>undefined.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})">
                        <span className="MuiButton-label-12">
                          One
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
            <div className="RSFButtonSelector-button-2 RSFButtonSelector-selected-5" amp-bind="class=>undefined.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})">
                        <span className="MuiButton-label-12">
                          Two
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
            <div className="RSFButtonSelector-button-2" amp-bind="class=>undefined.undefined.selected.id=="3" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})">
                        <span className="MuiButton-label-12">
                          Three
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
          </div>
        </div>
      </ButtonSelector>
    </WithStyles(ButtonSelector)>
  </inject-WithStyles(ButtonSelector)>
</Provider>
`;

exports[`ButtonSelector should render css color codes 1`] = `
<Provider app={{...}}>
  <inject-AmpState>
    <AmpState amp={false} initialState={{...}} id="moovAmpState">
      <Provider ampStateId="moovAmpState">
        <inject-WithStyles(ButtonSelector) model={{...}}>
          <WithStyles(ButtonSelector) model={{...}} amp={false} ampStateId="moovAmpState">
            <ButtonSelector model={{...}} amp={false} ampStateId="moovAmpState" classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} showSelectedText={false} strikeThroughDisabled={false} strikeThroughAngle={45}>
              <div className={[undefined]}>
                <div className="RSFButtonSelector-buttons-1">
                  <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3" amp-bind="class=>moovAmpState.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":null,"color":"#ffffff","price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":null,"color":"#ffffff","price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":null,"color":"#ffffff","price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":null,"color":"#ffffff","price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":null,"color":"#ffffff","price":null} }}})">
                              <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                                <div className="RSFButtonSelector-image-7" style={{...}} />
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                  <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" amp-bind="class=>moovAmpState.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":null,"color":"rgb(255, 0, 0)","price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":null,"color":"rgb(255, 0, 0)","price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":null,"color":"rgb(255, 0, 0)","price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":null,"color":"rgb(255, 0, 0)","price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":null,"color":"rgb(255, 0, 0)","price":null} }}})">
                              <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                                <div className="RSFButtonSelector-image-7" style={{...}} />
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                </div>
              </div>
            </ButtonSelector>
          </WithStyles(ButtonSelector)>
        </inject-WithStyles(ButtonSelector)>
      </Provider>
    </AmpState>
  </inject-AmpState>
</Provider>
`;

exports[`ButtonSelector should render links for options with urls 1`] = `
<Provider app={{...}}>
  <inject-AmpState>
    <AmpState amp={false} initialState={{...}} id="moovAmpState">
      <Provider ampStateId="moovAmpState">
        <inject-WithStyles(ButtonSelector) model={{...}}>
          <WithStyles(ButtonSelector) model={{...}} amp={false} ampStateId="moovAmpState">
            <ButtonSelector model={{...}} amp={false} ampStateId="moovAmpState" classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} showSelectedText={false} strikeThroughDisabled={false} strikeThroughAngle={45}>
              <div className={[undefined]}>
                <div className="RSFButtonSelector-buttons-1">
                  <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3" amp-bind="class=>moovAmpState.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/ffffff","color":null,"price":null} }}})">
                              <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                                <WithStyles(inject-Image) src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true}>
                                  <inject-Image src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true} classes={{...}}>
                                    <Image src="http://via.placeholder.com/128x128/ffffff" className="RSFButtonSelector-image-7" fill={true} classes={{...}} amp={false} quality={{...}} contain={false} lazy={false} lazyOffset={100}>
                                      <div className="RSFButtonSelector-image-7 RSFImage-root-47 RSFImage-fill-50">
                                        <img src="http://via.placeholder.com/128x128/ffffff" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                      </div>
                                    </Image>
                                  </inject-Image>
                                </WithStyles(inject-Image)>
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                  <div className="RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" amp-bind="class=>moovAmpState.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3 RSFButtonSelector-selectedImage-4" : "RSFButtonSelector-button-2 RSFButtonSelector-buttonWithImage-3"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":null,"disabled":false,"image":"http://via.placeholder.com/128x128/000000","color":null,"price":null} }}})">
                              <span className="MuiButton-label-12 RSFButtonSelector-imageLabel-6">
                                <WithStyles(inject-Image) src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true}>
                                  <inject-Image src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true} classes={{...}}>
                                    <Image src="http://via.placeholder.com/128x128/000000" className="RSFButtonSelector-image-7" fill={true} classes={{...}} amp={false} quality={{...}} contain={false} lazy={false} lazyOffset={100}>
                                      <div className="RSFButtonSelector-image-7 RSFImage-root-47 RSFImage-fill-50">
                                        <img src="http://via.placeholder.com/128x128/000000" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                      </div>
                                    </Image>
                                  </inject-Image>
                                </WithStyles(inject-Image)>
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                </div>
              </div>
            </ButtonSelector>
          </WithStyles(ButtonSelector)>
        </inject-WithStyles(ButtonSelector)>
      </Provider>
    </AmpState>
  </inject-AmpState>
</Provider>
`;

exports[`ButtonSelector should show the text of the selected option 1`] = `
<Provider app={{...}}>
  <inject-WithStyles(ButtonSelector) model={{...}} showSelectedText={true}>
    <WithStyles(ButtonSelector) model={{...}} showSelectedText={true} amp={false} ampStateId={[undefined]}>
      <ButtonSelector model={{...}} showSelectedText={true} amp={false} ampStateId={[undefined]} classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} strikeThroughDisabled={false} strikeThroughAngle={45}>
        <div className={[undefined]}>
          <div className="RSFButtonSelector-buttons-1">
            <div className="RSFButtonSelector-button-2" amp-bind="class=>undefined.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})">
                        <span className="MuiButton-label-12">
                          One
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
            <div className="RSFButtonSelector-button-2 RSFButtonSelector-selected-5" amp-bind="class=>undefined.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})">
                        <span className="MuiButton-label-12">
                          Two
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
            <div className="RSFButtonSelector-button-2" amp-bind="class=>undefined.undefined.selected.id=="3" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
              <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                  <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                    <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                      <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ undefined: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})">
                        <span className="MuiButton-label-12">
                          Three
                        </span>
                        <NoSsr defer={false} fallback={{...}}>
                          <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                            <TouchRipple center={false} classes={{...}}>
                              <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                <span className="MuiTouchRipple-root-40" />
                              </TransitionGroup>
                            </TouchRipple>
                          </WithStyles(TouchRipple)>
                        </NoSsr>
                      </button>
                    </ButtonBase>
                  </WithStyles(ButtonBase)>
                </Button>
              </WithStyles(Button)>
            </div>
          </div>
          <WithStyles(Typography) variant="caption" component="div" className="RSFButtonSelector-selectedName-9" amp-bind="text=>undefined.undefined.selected.text">
            <Typography variant="caption" component="div" className="RSFButtonSelector-selectedName-9" amp-bind="text=>undefined.undefined.selected.text" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
              <div className="MuiTypography-root-51 MuiTypography-caption-61 RSFButtonSelector-selectedName-9" amp-bind="text=>undefined.undefined.selected.text">
                Two
              </div>
            </Typography>
          </WithStyles(Typography)>
        </div>
      </ButtonSelector>
    </WithStyles(ButtonSelector)>
  </inject-WithStyles(ButtonSelector)>
</Provider>
`;

exports[`ButtonSelector should support amp 1`] = `
<Provider app={{...}}>
  <inject-AmpState>
    <AmpState amp={true} initialState={{...}} id="moovAmpState">
      <Provider ampStateId="moovAmpState">
        <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
          <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
            <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
          </SideEffect(NullComponent)>
        </HelmetWrapper>
        <amp-state id="moovAmpState">
          <script type="application/json" dangerouslySetInnerHTML={{...}} />
        </amp-state>
        <inject-WithStyles(ButtonSelector) model={{...}}>
          <WithStyles(ButtonSelector) model={{...}} amp={true} ampStateId="moovAmpState">
            <ButtonSelector model={{...}} amp={true} ampStateId="moovAmpState" classes={{...}} items={{...}} buttonProps={{...}} imageProps={{...}} showSelectedText={false} strikeThroughDisabled={false} strikeThroughAngle={45}>
              <div className={[undefined]}>
                <input type="hidden" name={[undefined]} value="2" amp-bind="value=>moovAmpState.undefined.selected.id" />
                <div className="RSFButtonSelector-buttons-1">
                  <div className="RSFButtonSelector-button-2" amp-bind="class=>moovAmpState.undefined.selected.id=="1" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"1","text":"One","disabled":false,"image":null,"color":null,"price":null} }}})">
                              <span className="MuiButton-label-12">
                                One
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                  <div className="RSFButtonSelector-button-2 RSFButtonSelector-selected-5" amp-bind="class=>moovAmpState.undefined.selected.id=="2" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"2","text":"Two","disabled":false,"image":null,"color":null,"price":null} }}})">
                              <span className="MuiButton-label-12">
                                Two
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                  <div className="RSFButtonSelector-button-2" amp-bind="class=>moovAmpState.undefined.selected.id=="3" ? "RSFButtonSelector-button-2 RSFButtonSelector-selected-5" : "RSFButtonSelector-button-2"">
                    <WithStyles(Button) onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}}>
                      <Button onClick={[Function: onClick]} href={[undefined]} disabled={false} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" classes={{...}} color="default" component="button" disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button" variant="text">
                        <WithStyles(ButtonBase) className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button">
                          <ButtonBase className="MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-30" onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})" component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                            <button className="MuiButtonBase-root-37 MuiButton-root-11 MuiButton-text-13 MuiButton-flat-16" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function: onClick]} href={[undefined]} on="tap:AMP.setState({ moovAmpState: { undefined: { selected: {"id":"3","text":"Three","disabled":false,"image":null,"color":null,"price":null} }}})">
                              <span className="MuiButton-label-12">
                                Three
                              </span>
                              <NoSsr defer={false} fallback={{...}}>
                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                  <TouchRipple center={false} classes={{...}}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-40" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </NoSsr>
                            </button>
                          </ButtonBase>
                        </WithStyles(ButtonBase)>
                      </Button>
                    </WithStyles(Button)>
                  </div>
                </div>
              </div>
            </ButtonSelector>
          </WithStyles(ButtonSelector)>
        </inject-WithStyles(ButtonSelector)>
      </Provider>
    </AmpState>
  </inject-AmpState>
</Provider>
`;
